[package]
name = "pura"
version = "0.1.0"
authors = ["penumrba23 <glbranimir@gmail.com>"]
edition = "2018"
keywords = ["containers", "container-runtime", "container-engine", "docker", "linux"]
license = "MIT"

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
nix = "0.21.0"

[dev-dependencies]
serial_test = "0.5.1"